# syllabler

./: .gitignore  README.md  pyproject.toml
src/syllabel/: app.py  propose_labels.py
src/syllabel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
